fix: resource-map broken when sidebar is collapsed

--- a/components/KubeResourceMap.scss
+++ b/components/KubeResourceMap.scss
@@ -1,3 +1,11 @@
 .KubeResourceMap {
   padding: calc(var(--padding) * 2);
+
+  h2 {
+    border-bottom: 1px solid;
+  }
+
+  main {
+    overflow: hidden;
+  }
 }
